Alterations in intro section

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <header>
-      <h1 class="title-1"> Gluten-Free Chocolate Cake Recipe </h1>
-      <p class="intro"> <i class="material-icons md-18"> grain </i> Look no further for a gluten-free chocolate cake recipe! </p>
+      <p class="title-1"> Gluten-Free Chocolate Cake </p>
+      <p class="intro">  <i class="material-icons md-18 "> drag_indicator </i>  Look no further for a gluten-free chocolate cake recipe! 
+        You can check out the full notes and ideas on the original page (check the Source at the bottom of the page). Enjoy!!
+      </p>
       <img src="img/cake.jpg" class="recipe-img" alt="cake picture" /> 
     </header>
 
