--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <header>
       <p class="title-1"> Gluten-Free Chocolate Cake </p>
-      <p class="intro">  <i class="material-icons md-18 "> drag_indicator </i>  Look no further for a gluten-free chocolate cake recipe! 
-        You can check out the full notes and ideas on the original page (check the Source at the bottom of the page). Enjoy!!
+      <p class="intro"> <i class="material-icons md-18 "> drag_indicator </i> Look no further for a gluten-free chocolate cake recipe! 
+        You can check out the full notes and ideas on the original page (check the <a href="#source"> Source </a>  at the bottom of the page). Enjoy!!
       </p>
-      <img src="img/cake.jpg" class="recipe-img" alt="cake picture" /> 
+      <img src="img/cake.jpg" class="recipe-img" alt="cake picture"/> 
     </header>
 
     <main >
@@ -79,7 +79,7 @@
           </div>
         </div>
       </section>
-      <p class="source"> Source: 
+      <p id="source" class="source"> Source: 
         <a href="https://www.glutenfreepalate.com/easy-gluten-free-chocolate-cake-11-ingredients/"> Gluten-Free Palate </a> 
      </p>
     </main>
